Fix recent spacing

--- a/css/modules/styles-chart.css
+++ b/css/modules/styles-chart.css
@@ -4,10 +4,7 @@
 	background: #fff;
 }
 
-.MainChartSelection {
-	float: left;
-	margin-left: 1vw;
-}
+.MainChartSelection {}
 
 .chart-options {}
 
